--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   "dependencies": {
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-calendar": "^3.9.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
+    "@types/react-calendar": "^3.5.2",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
+    "tailwindcss-logical": "^3.0.0",
     "typescript": "4.8.3"
   }
 }
