--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.0.0-rc.10",
+    "axios": "^0.27.2",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-calendar": "^3.9.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-calendar": "^3.5.2",
