--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-calendar": "^3.9.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
