--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.0.0-rc.10",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.3",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-calendar": "^3.9.0",
