--- a/package.json
+++ b/package.json
@@ -1,35 +1,40 @@
 {
-  "name": "nady_tanta-reservation",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@supabase/supabase-js": "^2.0.0-rc.10",
-    "axios": "^0.27.2",
-    "date-fns": "^2.29.3",
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-calendar": "^3.9.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
-  },
-  "devDependencies": {
-    "@types/axios": "^0.14.0",
-    "@types/node": "18.7.23",
-    "@types/react": "18.0.21",
-    "@types/react-calendar": "^3.5.2",
-    "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.12",
-    "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
-    "tailwindcss-logical": "^3.0.0",
-    "typescript": "4.8.3"
-  }
+	"name": "nady_tanta-reservation",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"clean:all": "rimraf .next node_modules"
+	},
+	"dependencies": {
+		"@supabase/supabase-auth-helpers": "^1.4.2",
+		"@supabase/supabase-js": "^1.35.7",
+		"axios": "^0.27.2",
+		"cookie": "^0.5.0",
+		"date-fns": "^2.29.3",
+		"next": "12.3.1",
+		"react": "18.2.0",
+		"react-calendar": "^3.9.0",
+		"react-dom": "18.2.0",
+		"react-icons": "^4.4.0"
+	},
+	"devDependencies": {
+		"@types/axios": "^0.14.0",
+		"@types/cookie": "^0.5.1",
+		"@types/node": "18.7.23",
+		"@types/react": "18.0.21",
+		"@types/react-calendar": "^3.5.2",
+		"@types/react-dom": "18.0.6",
+		"autoprefixer": "^10.4.12",
+		"eslint": "8.24.0",
+		"eslint-config-next": "12.3.1",
+		"postcss": "^8.4.16",
+		"rimraf": "^3.0.2",
+		"tailwindcss": "^3.1.8",
+		"tailwindcss-logical": "^3.0.0",
+		"typescript": "4.8.3"
+	}
 }
