add env variables to yml file

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -64,6 +64,12 @@ jobs:
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+      - name: set many environment variables
+        uses: allenevans/set-env@v2.0.0
+        with:
+          NEXT_PUBLIC_SUPABASE_URL: abc
+          SUPABASE_SERVICE_KEY: def
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: ghi
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: Static HTML export with Next.js
