--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"autoprefixer": "^10.4.12",
 		"eslint": "8.24.0",
 		"eslint-config-next": "12.3.1",
+		"netlify-cli": "^12.0.2",
 		"postcss": "^8.4.16",
 		"rimraf": "^3.0.2",
 		"tailwindcss": "^3.1.8",
